--- a/ReadCard/bin/ReadCard.dll.config
+++ b/ReadCard/bin/ReadCard.dll.config
@@ -70,8 +70,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	  <add name="DefaultConnection" connectionString="Data Source=DESKTOP-RIEN7BO\SQL2019;Initial Catalog=CCCD;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CCCDEntities1" connectionString="metadata=res://*/Data.DataCCCD.csdl|res://*/Data.DataCCCD.ssdl|res://*/Data.DataCCCD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-RIEN7BO\SQL2019;initial catalog=CCCD;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=DESKTOP-CDILG3B\SQL2019;Initial Catalog=CCCD;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CCCDEntities1" connectionString="metadata=res://*/Data.DataCCCD.csdl|res://*/Data.DataCCCD.ssdl|res://*/Data.DataCCCD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-CDILG3B\SQL2019;initial catalog=CCCD;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
